--- a/app/core/templates/core/blendsheettemplate.html
+++ b/app/core/templates/core/blendsheettemplate.html
@@ -17,51 +17,51 @@
                     <td>
                         <div id="referenceNumberContainer" class="headerCell">
                             <p class="fieldLabel">Reference Number:&nbsp;</p>
-                            <input id="referenceNumber" class="blendSheetField"></input>
+                            <input id="referenceNumber" class="topLevelField" key="reference_number"></input>
                         </div>
                         <div id="preparedByContainer" class="headerCell">
                             <p class="fieldLabel">Prepared By:&nbsp;</p>
-                            <input id="preparedBy" class="blendSheetField"></input>
-                            <input id="preparedDate" class="blendSheetField"></input>
+                            <input id="preparedBy" class="topLevelField" key="prepared_by"></input>
+                            <input id="preparedDate" class="topLevelField" key="prepared_date"></input>
                         </div>
                     </td>
                     <td>
                         <div id="primaryFormula" class="text-center">
                             <h1>Starbrite Primary Formula</h1>
                             <div id="itemIdentityContainer" class="headerCell">
-                                <h3 id="itemCode" class="blendSheetField"></h3>
-                                <h3 id="itemDescription" class="blendSheetField"></h3>
+                                <h3 id="itemCode" class="topLevelField" key="item_code"></h3>
+                                <h3 id="itemDescription" class="topLevelField" key="item_description"></h3>
                             </div>
                         </div>
                     </td>
                     <td>
                         <div id="dateOfIssueContainer" class="headerCell">
                             <p class="fieldLabel">Date of Issue:&nbsp;</p>
-                            <p id="lastEditDate" class="blendSheetField"></p>
+                            <p id="lastEditDate" class="topLevelField" key="last_edit_date"></p>
                         </div>
                         <div id="lbsPerGallonContainer" class="headerCell">
                             <p class="fieldLabel">Lbs. Per Gallon:&nbsp;</p>
-                            <input id="lbsPerGallon" class="blendSheetField"></input>
+                            <input id="lbsPerGallon" class="topLevelField" key="lbs_per_gallon"></input>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div id="batchWeightContainer" class="headerCell">
+                        <div id="totalWeightContainer" class="headerCell">
                             <p class="fieldLabel">Total Weight:&nbsp;</p>
-                            <p id="batchWeight" class="blendSheetField"></p>
+                            <p id="totalWeight" class="topLevelField" key="total_weight"></p>
                         </div>
                     </td>
                     <td>
                         <div id="batchQuantityContainer" class="headerCell">
                             <h4 class="fieldLabel">Theory Gallons:&nbsp;</h4>
-                            <input id="batchQuantity" class="blendSheetField"></input>
+                            <input id="batchQuantity" class="topLevelField" key="batch_quantity"></input>
                         </div>
                     </td>
                     <td>
                         <div id="lotNumberContainer" class="headerCell">
                             <h4 class="fieldLabel">Lot Number:&nbsp;</h4>
-                            <h4 id="lotNumber" class="blendSheetField">N/A</h4>
+                            <h4 id="lotNumber" class="topLevelField" key="lot_number">N/A</h4>
                         </div>
                     </td>
                 </tr>
@@ -95,7 +95,7 @@
         <div class="blendSheetDivider"></div>
         <div id="processPreparationContainer">
             <h3>Process Preparation</h3>
-            <input id="processPreparation" class="blendSheetField"></input>
+            <input id="processPreparation" class="topLevelField" key=""></input>
             <br>
         </div>
         <div id="blendSheetStepsContainer" class="table-responsive-sm">
