--- a/app/core/templates/core/blendsheettemplate.html
+++ b/app/core/templates/core/blendsheettemplate.html
@@ -17,11 +17,11 @@
                     <td>
                         <div id="referenceNumberContainer" class="headerCell">
                             <p class="fieldLabel">Reference Number:&nbsp;</p>
-                            <input id="referenceNumber" class="topLevelField" key="reference_number"></input>
+                            <input id="referenceNumber" class="topLevelField shortTopLevelField" key="reference_number"></input>
                         </div>
                         <div id="preparedByContainer" class="headerCell">
                             <p class="fieldLabel">Prepared By:&nbsp;</p>
-                            <input id="preparedBy" class="topLevelField" key="prepared_by"></input>
+                            <input id="preparedBy" class="topLevelField shortTopLevelField" key="prepared_by"></input>
                             <input id="preparedDate" class="topLevelField" key="prepared_date"></input>
                         </div>
                     </td>
@@ -29,8 +29,8 @@
                         <div id="primaryFormula" class="text-center">
                             <h1>Starbrite Primary Formula</h1>
                             <div id="itemIdentityContainer" class="headerCell">
-                                <h3 id="itemCode" class="topLevelField" key="item_code"></h3>
-                                <h3 id="itemDescription" class="topLevelField" key="item_description"></h3>
+                                <input id="itemCode" class="topLevelField itemInfo" key="item_code"></h3>
+                                <input id="itemDescription" class="topLevelField itemInfo" key="item_description"></h3>
                             </div>
                         </div>
                     </td>
@@ -41,7 +41,7 @@
                         </div>
                         <div id="lbsPerGallonContainer" class="headerCell">
                             <p class="fieldLabel">Lbs. Per Gallon:&nbsp;</p>
-                            <input id="lbsPerGallon" class="topLevelField" key="lbs_per_gallon"></input>
+                            <input id="lbsPerGallon" class="topLevelField shortTopLevelField" key="lbs_per_gallon"></input>
                         </div>
                     </td>
                 </tr>
@@ -55,7 +55,7 @@
                     <td>
                         <div id="batchQuantityContainer" class="headerCell">
                             <h4 class="fieldLabel">Theory Gallons:&nbsp;</h4>
-                            <input id="batchQuantity" class="topLevelField" key="batch_quantity"></input>
+                            <input id="batchQuantity" class="topLevelField shortTopLevelField" key="batch_quantity"></input>
                         </div>
                     </td>
                     <td>
