--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -29,9 +29,10 @@
         Inventory
     </a>
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="/prodverse/items-to-count?recordType=warehouse">Create Warehouse Count List</a></li>
+        <li><a class="dropdown-item" href="/prodverse/items-by-audit-group?recordType=warehouse">Create Warehouse Count List</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts?recordType=blend">Create A Blend Count List</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-component-counts?recordType=blendcomponent">Create Blend Component Count List</a></li>
+        <li><a class="dropdown-item" href="/core/items-by-audit-group?recordType=blendcomponent">Create Blend Component Count List</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/count-records/?recordType=warehouse">View All Warehouse Count Records</a></li>
         <li><a class="dropdown-item" href="/core/count-records?recordType=blend">View All Blend Counts</a></li>
