--- a/app/core/templates/core/inventorycounts/countcollectionlinks.html
+++ b/app/core/templates/core/inventorycounts/countcollectionlinks.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% comment %} {% block scripts %} <link rel="stylesheet" type="text/css" href="{% static 'core/css/countcollectionlinks.css' %}">{% endblock%} {% endcomment %}
+{% block scripts %} <link rel="stylesheet" type="text/css" href="{% static 'core/css/countcollectionlinks.css' %}">{% endblock%}
 {% block title %}<title>Count Lists</title>{% endblock %}
 
 
@@ -11,27 +11,34 @@
                 <thead class="thead-dark">
                     <tr>
                         {% comment %} {% if user.is_staff %}<th scope="col"></th>{% endif %} {% endcomment %}
-                        <th scope="col">Collection ID</th>
-                        <th scope="col">Link</th>
-                        {% if user.is_staff %}<th scope="col"></th>{% endif %}
+                        <th scope="col">Collection</th>
+                        {% if user.is_staff %}
+                            <th scope="col">Link</th>
+                            <th scope="col"></th>
+                        {% endif %}
                     </tr>
                 </thead>
         {% for item in count_collection_links %}
             <tr>
-                {% comment %} {% if user.is_staff %}<td class='text-center'>
-                    <input type="checkbox" name={{ item.id }} class="checkbox"></input>
-                </td>{% endif %} {% endcomment %}
-                <td>{{ item.collection_id }}</td>
-                <td><a href="{{ item.collection_link }}">Enter Counts >></a></td>
-                {% if user.is_staff %}
-                <td class="text-center">
-                    <a href="/core/delete-count-collection-links?list=[{{ item.id }}]" type="button" class="btn btn-outline-danger deleteBtn">
-                        <i class="fa fa-trash" disabled="disabled"></i>
-                    </a>
+                <td>
+                    {% if user.is_staff %}
+                        <input id="input{{ item.id }}" collectionlinkitemid="{{ item.id }}" class="collectionIdInput" value={{ item.collection_id }}></input>
+                        <button collectionlinkitemid="{{ item.id }}" class="collectionIdButton" style="display:none;">Save Name Change</button>
+                    {% else %}
+                        <a href="{{ item.collection_link }}">{{ item.collection_id }}  >></a>
+                    {% endif %}
                 </td>
+                {% if user.is_staff %}
+                    <td><a href="{{ item.collection_link }}">Enter Counts >></a></td>
+                    <td class="text-center">
+                        <a href="/core/delete-count-collection-links?list=[{{ item.id }}]" type="button" class="btn btn-outline-danger deleteBtn">
+                            <i class="fa fa-trash" disabled="disabled"></i>
+                        </a>
+                    </td>
                 {% endif %}
             </tr>
         {% endfor %}
+
     {% else %}
         <h2>No counts needed now.</h2>
     {% endif %}
