--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -6,81 +6,95 @@
 {% block content %}
     <div class='text-center'>
         <h1>Enter Counts Below</h1>
-        <p><em>Printed {{ todays_date|date:"m/d/y" }}</em></p>
-        {% if user.is_staff %}
-            <button class="btn btn-outline-secondary noPrint" id="changeDatesButton">Change Dates to Today</button>
-        {% endif %}
-        <div class="noPrint"><br></div>
+        <div class="noPrint returnlink"><a class="returnlink" href="/core/display-count-collection-links/">&#60;&#60; Return to Count Links Page</a></div>
     </div>
-    {% if submitted %}
-        <a href='/core/count-records?recordType=blend&page=1'></a>
-    {% else %}
-        <div>
-            <form action="" method=POST>
-                {% csrf_token %}
-                <div class="table-responsive-sm">
-                    <table class="table text-left table-bordered table-hover">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col" class="text-center">Item Code</th>
-                                <th scope="col" class="text-center">Description</th>
-                                <th scope="col" class="text-center">Exp. Qty</th>
-                                <th scope="col" class="text-center">Counted Qty</th>
-                                <th scope="col" class="noPrint text-center">Count Date</th>
-                                <th scope="col" class="noPrint text-center">Variance</th>
-                                <th scope="col" class="noPrint text-center">Valid</th>
+    <div>
+        <form action="" method=POST>
+            <div class="text-center buttonContainer noPrint">
+                <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save</button>
+            </div>
+            {% if request.GET.success %}
+                <div class="success-message text-center"><h2 class="fade-out fade-hidden">Counts submitted successfully!</h2></div>
+            {% endif %}
+            {% csrf_token %}
+            <div class="table-responsive-sm">
+                <table class="table text-left table-bordered table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col" class="text-center">Item Code</th>
+                            <th scope="col" class="text-center">Description</th>
+                            <th scope="col" class="text-center">Exp. Qty</th>
+                            <th scope="col" class="text-center">Counted Qty</th>
+                            <th scope="col" class="noPrint" style="display:flex;">
+                                Count Date
                                 {% if user.is_staff %}
-                                    <th scope="col" class="noPrint text-center"></th>
+                                    <div class="dropdown">
+                                        <button class="btn dropdown-toggle datechangedropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                        </button>
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                            <li id="changeDatesButton"><a class="dropdown-item">Change Dates to Today</a></li>
+                                        </ul>
+                                    </div>
+                                {% endif %}
+                            </th>
+                            <th scope="col" class="noPrint text-center">Variance</th>
+                            <th scope="col" class="noPrint text-center">Valid</th>
+                            {% if user.is_staff %}
+                                <th scope="col" class="noPrint text-center">
+                                    {% if user.is_staff %}
+                                        <a class="discardButton" id="discardAllButton" href="" style="color:white;border:2px solid white;">
+                                            Delete All
+                                        </a>
+                                    {% endif %}
+                                </th>
+                            {% endif %}
+                        </tr>
+                    </thead>
+                    {{ these_counts_formset.management_form }}
+                    <tbody>
+                        {% for form in these_counts_formset %}
+                            <tr>
+                                {% for field in form %}
+                                    {% if field.name == "variance" %}
+                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
+                                    {% elif field.name == "counted" %}
+                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-center">{{ field }}{{ field.errors }}</td>
+                                    {% elif field.name == "collection_id" %}
+                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
+                                    {% elif field.name == "count_type" %}
+                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
+                                    {% else %}
+                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">{{ field }}{{ field.errors }}</td>
+                                    {% endif %}
+                                {% endfor %}
+                                {% if user.is_staff %}
+                                    <td class="discardButtonCell text-center noPrint">
+                                        <a class="discardButton noPrint" href="">
+                                            <i class="fa fa-trash" disabled="disabled"></i>
+                                        </a>
+                                    </td>
                                 {% endif %}
                             </tr>
-                        </thead>
-                {{ these_counts_formset.management_form }}
-                {% for form in these_counts_formset %}
-                    <tr>
-                        {% for field in form %}
-                            {% if field.name == "variance" %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
-                            {% elif field.name == "counted" %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-center">{{ field }}{{ field.errors }}</td>
-                            {% elif field.name == "collection_id" %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
-                            {% elif field.name == "count_type" %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
-                            {% else %}
-                                <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">{{ field }}{{ field.errors }}</td>
-                            {% endif %}
                         {% endfor %}
                         {% if user.is_staff %}
-                            <td class="discardButtonCell text-center noPrint">
-                                <a class="discardButton noPrint" href="">
-                                    Delete
-                                </a>
+                        <tr>
+                            <td colspan="8">
+                                <div id="addBlendButtonContainer" class="buttonContainer noPrint">
+                                    <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
+                                        Add Item
+                                    </button>
+                                </div>
                             </td>
+                        </tr>
                         {% endif %}
-                    </tr>
-                {% endfor %}
-                {% if user.is_staff %}
-                <tr>
-                    <div id="addBlendButtonContainer" class="buttonContainer noPrint">
-                        <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
-                            Add Item
-                        </button>
-                    </div>
-                </tr>
-                {% endif %}
-            </form>
-        </div>
-        <div class="text-center buttonContainer noPrint">
-            <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save</button>
-            {% if user.is_staff %}
-                <a class="discardButton" id="discardAllButton" href="">
-                    Delete All
-                </a>
-            {% endif %}
-        </div>
-        <br>
-        <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
-    {% endif %}
+                    </tbody>
+                </table>
+            </div>
+        </form>
+    </div>
+    <br>
+    <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
+
         
     {% include 'core/modals/add-countlistitem-modal.html' %}
 
