Remove extra sheet from the single issue sheet.

--- a/app/core/static/core/css/issuesheets.css
+++ b/app/core/static/core/css/issuesheets.css
@@ -90,6 +90,10 @@
         border: none;
     }
 
+    .noPrint {
+        display: none !important;
+    }
+
     .datechangesection {
         display: none !important;
     }
