--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -152,6 +152,5 @@
         {% endif %}
 
     </div>
-    <p style="page-break-before: always; color:white;">.</p>
+    <p style="page-break-before: always; color:white;" class="noPrint">.</p>
 {% endblock content %}
-
