--- a/app/core/templates/core/blendsheettemplate.html
+++ b/app/core/templates/core/blendsheettemplate.html
@@ -49,7 +49,7 @@
                     <td>
                         <div id="totalWeightContainer" class="headerCell">
                             <p class="fieldLabel">Total Weight:&nbsp;</p>
-                            <p id="totalWeight" class="topLevelField" key="total_weight"></p>
+                            <p id="totalWeight" class="topLevelField" key="total_weight"></p>``
                         </div>
                     </td>
                     <td>
@@ -95,7 +95,7 @@
         <div class="blendSheetDivider"></div>
         <div id="processPreparationContainer">
             <h3>Process Preparation</h3>
-            <input id="processPreparation" class="topLevelField" key=""></input>
+            <input id="processPreparation" class="topLevelField" key="process_preparation"></input>
             <br>
         </div>
         <div id="blendSheetStepsContainer" class="table-responsive-sm">
