--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -29,7 +29,9 @@
                     <th scope="col" class="text-center">Last Txn</th>
                     <th scope="col" class="text-center">First Shortage</th>
                     <th scope="col" class="text-center">Line</th>
-                    <th scope="col" class="text-center">Scheduled Short</th>
+                    <th scope="col" class="text-center">1wk Short</th>
+                    <th scope="col" class="text-center">2wk Short</th>
+                    <th scope="col" class="text-center">3wk+ Short</th>
                     <th scope="col" class="text-center">Unscheduled Short</th>
                     <th scope="col" class="text-center">Total Short</th>
                     {% if user.is_staff %}
@@ -119,21 +121,11 @@
                             {{ item.prod_line }}
                         {% endif %}
                     </td>
-                    <td>
-                        <span title="1Wk: {{ item.one_wk_short|floatformat:2 }}&#13;2Wks: {{ item.two_wk_short|floatformat:2 }}&#13;3Wks: {{ item.three_wk_short|floatformat:2 }}&#13;">
-                            {{ item.three_wk_short|floatformat:2 }} gal
-                        </span>
-                    </td>
-                    <td>
-                        <span title="">
-                            {{ item.unscheduled_short|floatformat:2 }} gal
-                        </span>
-                    </td>
-                    <td>
-                        <span title="">
-                            {{ item.total_shortage|floatformat:2 }} gal
-                        </span>
-                    </td>
+                    <td>{{ item.one_wk_short|floatformat:2 }} gal</td>
+                    <td>{{ item.two_wk_short|floatformat:2 }} gal</td>
+                    <td>{{ item.three_wk_short|floatformat:2 }} gal</td>
+                    <td>{{ item.unscheduled_short|floatformat:2 }} gal</td>
+                    <td>{{ item.total_shortage|floatformat:2 }} gal</td>
                     <td class="text-center lotNumCell">
                         <button class="btn btn-secondary lotNumButton" 
                             data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
