Add counted date to itemsbyauditgroup.

--- a/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
+++ b/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
@@ -46,6 +46,7 @@
                     <th scope="col" class='text-center'>Description</th>
                     <th scope="col" class='text-center'>On Hand</th>
                     <th scope="col" class='text-center'>Latest Txn</th>
+                    <th scope="col" class='text-center'>Last Count</th>
                     <th scope="col" class='text-center'>Audit Group</th>
                     <th scope="col" class='text-center'></th>
                 </tr>
@@ -61,6 +62,7 @@
                     <td>{{ item.item_description }}</td>
                     <td>{{ item.qty_on_hand }}</td>
                     <td>{% for tuple_item in item.transaction_info %}{{ tuple_item }}{% endfor %}</td>
+                    <td>{{ item.last_count }}</td>
                     <td>{{ item.audit_group }}</td>
                     <td><i class="fa fa-pencil editIcon" data-itemID="{{ item.id }}" data-itemCode="{{ item.item_code }}" data-auditGroup="{{ item.audit_group }}"></i></td>
                 </tr>                
