--- a/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
+++ b/app/core/templates/core/inventorycounts/itemsbyauditgroup.html
@@ -45,6 +45,7 @@
                     <th scope="col" class='text-center'>Item</th>
                     <th scope="col" class='text-center'>Description</th>
                     <th scope="col" class='text-center'>On Hand</th>
+                    <th scope="col" class='text-center'>Next Run</th>
                     <th scope="col" class='text-center'>Latest Txn</th>
                     <th scope="col" class='text-center'>Last Count</th>
                     <th scope="col" class='text-center'>Audit Group</th>
@@ -61,6 +62,7 @@
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.item_description }}</td>
                     <td>{{ item.qty_on_hand }}</td>
+                    <td>{{ item.next_usage|floatformat:2 }}</td>
                     <td>{% for tuple_item in item.transaction_info %}{{ tuple_item }}{% endfor %}</td>
                     <td>{{ item.last_count }}</td>
                     <td>{{ item.audit_group }}</td>
