Add feedback link to navbars.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -51,6 +51,9 @@
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
     </ul>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/feedback/">Feedback</a>
+</li>
 <li class="nav-item" style="display:none;"  id="refreshWarningLink">
     <a class="nav-link navbar-help pulse-element" href="/core/display-loop-status"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Issue with background data refresh.">
         <div>
