--- a/app/templates/navbars/all-users-navbar-items.html
+++ b/app/templates/navbars/all-users-navbar-items.html
@@ -12,4 +12,7 @@
         <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
         <li><a class="dropdown-item" href="/core/component-shortages">Component Shortages</a></li>
     </ul>
+    <li class="nav-item">
+        <a class="nav-link" href="/core/feedback/">Feedback</a>
+    </li>
 </li>
