--- a/app/templates/navbars/forklift-group-navbar-items.html
+++ b/app/templates/navbars/forklift-group-navbar-items.html
@@ -6,3 +6,6 @@
         <li><a class="dropdown-item" href="/core/forklift-checklist">Forklift Checklist</a></li>
     </ul>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/feedback/">Feedback</a>
+</li>
