--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -33,3 +33,6 @@
     <a class="nav-link navbar-help" href="/core/display-loop-status" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check if the background data refresh is running.">Refresh Status</a>
     <div class="tooltip"></div>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/feedback/">Feedback</a>
+</li>
