--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -26,3 +26,6 @@
 <li class="nav-item">
     <a class="nav-link" href="/core/display-count-collection-links">Count Links</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/feedback/">Feedback</a>
+</li>
