--- a/app/templates/navbars/lab-navbar-items.html
+++ b/app/templates/navbars/lab-navbar-items.html
@@ -4,3 +4,6 @@
 <li class="nav-item">
     <a class="nav-link" href="/core/lot-num-records">Lot Numbers</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/feedback/">Feedback</a>
+</li>
