Updates to navbar and migrations.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -54,11 +54,11 @@
 <li class="nav-item">
     <a class="nav-link" href="/core/feedback/">Feedback</a>
 </li>
-<li class="nav-item" style="display:none;"  id="refreshWarningLink">
+{% comment %} <li class="nav-item" style="display:none;"  id="refreshWarningLink">
     <a class="nav-link navbar-help pulse-element" href="/core/display-loop-status"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Issue with background data refresh.">
         <div>
             <img src="{% static 'core/media/exclamatino.png' %}" height="50" width="75">
         </div>
     </a>
     <div class="tooltip"></div>
-</li>
+</li> {% endcomment %}
