Enhance item location info.

--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -21,9 +21,11 @@
 </ul>
 <div class="tab-content">
     <div class="tab-pane fade show active" id="horixContainer">
+        <br><a href="/core/blend-schedule?blend-area=Hx">View Horix Schedule</a>
         <br>{% include 'core/blendschedules/horixschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="drumsContainer">
+        <br><a href="/core/blend-schedule?blend-area=Dm">View Drums Schedule</a>
         <br>{% include 'core/blendschedules/drumschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="desk1Container">
@@ -35,6 +37,7 @@
         {% include 'core/blendschedules/desktwoschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="totesContainer">
+        <br><a href="/core/blend-schedule?blend-area=Totes">View Totes Schedule</a>
         <br>{% include 'core/blendschedules/toteschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="pailsContainer">
