--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -19,7 +19,7 @@
             <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteCountRecordsModal">
                 Delete Counts
             </button>
-            <button id="create_list" class="btn">
+            <button id="create_list">
                 Create New Count List
             </button>
         {% endif %}
