--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}<title>Select Counts</title>{% endblock %}
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href ="{% static 'core/upcomingBlends.css' %}">
+    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/upcomingBlends.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -32,9 +32,9 @@
             </thead>
             {% for item in blends_made_recently %}
                     <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
-                        {% if user.is_staff %}<td class='text-center'>
-                            <input type="checkbox" itemcode={{ item.item_code }} name={{ item.item_code }} class="checkbox"></input>
-                        </td>{% endif %}
+                        <td class='text-center'>
+                            <input type="checkbox" itemcode="{{ item.item_code }}" name="{{ item.item_code }}" class="checkbox"></input>
+                        </td>
                         <td>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle blendinfo" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,9 +76,9 @@
             {% endfor %}
             {% for item in upcoming_blends %}
                     <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
-                        {% if user.is_staff %}<td class='text-center'>
-                            <input type="checkbox" name={{ item.item_code }}></input>
-                        </td>{% endif %}
+                        <td class='text-center'>
+                            <input type="checkbox" itemcode="{{ item.item_code }}" name="{{ item.item_code }}" class="checkbox"></input>
+                        </td>
                         <td>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle blendinfo" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
