--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -45,7 +45,7 @@
                             <th scope="col" class="noPrint text-center">Approved</th>
                             <th scope="col" class="noPrint text-center">Comment</th>
                             <th scope="col" class="noPrint text-center">Zone</th>
-                            <th scope="col" class="noPrint text-center">Bin</th>
+                            <th scope="col" class="noPrint text-center">Location</th>
                             {% if user.is_staff %}
                                 <th scope="col" class="noPrint text-center text-nowrap">
                                     {% if user.is_staff %}
@@ -62,10 +62,20 @@
                         {% for form in these_counts_formset %}
                             <tr>
                                 {% for field in form %}
-                                    {% if field.name == "variance" %}
+                                    {% comment %} only render the counted_date if user is admin {% endcomment %}
+                                    {% if field.name == "counted_date" and not user.is_staff %}
+                                        <td data-countrecord-id={{ form.id.value }} style="display:none;" class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
+                                    {% comment %} center align variance and counted {% endcomment %}
+                                    {% elif field.name == "variance" %}
                                         <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right">{{ field }}{{ field.errors }}</td>
                                     {% elif field.name == "counted" %}
                                         <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-center">{{ field }}{{ field.errors }}</td>
+                                    {% elif field.name == "expected_quantity" %}
+                                        <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }}">
+                                            {{ field }}{{ field.errors }}
+                                            <i class="fa fa-refresh qtyrefreshbutton" {% if not user.is_staff %}style="display:none" {% endif %}itemcode={{ form.item_code.value }} correspondingrecordid={{ form.id.value }}></i>
+                                        </td>
+                                    {% comment %} Don't display count_type or collection_id {% endcomment %}
                                     {% elif field.name == "collection_id" %}
                                         <td data-countrecord-id={{ form.id.value }} class="tbl-cell-{{ field.name }} text-right" style="display:none;">{{ field }}{{ field.errors }}</td>
                                     {% elif field.name == "count_type" %}
