Recitfy issue with lotnum error form.

--- a/app/core/templates/core/lotnumerrorform.html
+++ b/app/core/templates/core/lotnumerrorform.html
@@ -1,5 +1,7 @@
 {%extends base.html%}
-<link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotNumModal.css' %}">
+{% block scripts %}
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotNumModal.css' %}">
+{% endblock %}
 {% block content %}
 <h1>Please correct errors</h1>
 <div id="newLotNumFormContainer">
