--- a/app/core/templates/core/lotnumerrorform.html
+++ b/app/core/templates/core/lotnumerrorform.html
@@ -1,7 +1,7 @@
 {%extends base.html%}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotNumModal.css' %}">
-{% endblock %}
+{% endblock scripts %}
 {% block content %}
 <h1>Please correct errors</h1>
 <div id="newLotNumFormContainer">
