--- a/app/core/templates/core/modals/add-lotnum-modal.html
+++ b/app/core/templates/core/modals/add-lotnum-modal.html
@@ -17,6 +17,23 @@
                     <table id="lotnumformtable">
                         {{ add_lot_form }}
                     </table>
+                    <tr>
+                        <td><i>Duplicates?</i></td>
+                        <td>
+                            <select id="addLotNumDuplicateSelector">
+                                <option value=1>1</option>
+                                <option value=2>2</option>
+                                <option value=3>3</option>
+                                <option value=4>4</option>
+                                <option value=5>5</option>
+                                <option value=6>6</option>
+                                <option value=7>7</option>
+                                <option value=8>8</option>
+                                <option value=9>9</option>
+                            </select>
+                        </td>
+                    </tr>
+                    
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="submit" name="addNewLotNumRecord" value="Create New Lot"  class="btn btn-primary">Add</button>
