Update countlist checkbox styling.

--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -178,3 +178,15 @@ td[class*="counted_quantity"]{
 .returnlink {
     margin: 15px;
 }
+
+.checkedcountedcell {
+    background-color: rgb(145, 255, 165) !important;
+}
+
+.uncheckedcountedcell {
+    background-color: rgb(255, 145, 145) !important;
+}
+
+input[type='checkbox'] {
+    transform: scale(2);
+}
