--- a/app/core/templates/core/inventorycounts/countrecordreport.html
+++ b/app/core/templates/core/inventorycounts/countrecordreport.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block scripts %} <link rel="stylesheet" type="text/css" href="{% static 'core/css/countrecord.css' %}">{% endblock%}
 {% block title %}<title>Selected Counts</title>{% endblock %}
 
 
@@ -36,7 +37,7 @@
                     <td {% if item.variance < 0 %}style="text-align:right; color:red; font-weight:bold;"{% else %}style="text-align:right;"{% endif %}>{{ item.variance|floatformat:4 }}</td>
                     <td>{{ item.counted_by }}</td>
                     <td>{{ item.collection_id }}</td>
-                    <td {% if item.variance_cost < 0 %}style="text-align:right; color:red; font-weight:bold;"{% else %}style="text-align:right;"{% endif %}>{{ item.variance_cost|floatformat:4 }}</td>
+                    <td {% if item.variance_cost < 0 %}style="text-align:right; color:red; font-weight:bold;"{% else %}style="text-align:right;"{% endif %}>$   {{ item.variance_cost|floatformat:2 }}</td>
                 </tr>
             {% endfor %}
         </table>
